// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-popper Click Outside Disabled 1`] = `
<div
  class="m-popper"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Open popper 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-popper On Tab Change Restore Transition 1`] = `
<div>
  <div
    class="m-popper"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open popper 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
   
  <p>
    <a
      href="http://twitter.com"
      target="_blank"
    >
      Go to twitter
    </a>
  </p>
</div>
`;

exports[`Storyshots modul-components|m-popper default 1`] = `
<div
  class="m-popper"
>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Open popper 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <!---->
</div>
`;
